test/fixtures/config/theming/error/noCompletionType/.gulp.js
module.exports = {
  msgs: {
    error: {
      noCompletionType: 'NO COMPLETION TYPE',
    },
  },
};
